--- a/webapp-us/index.html
+++ b/webapp-us/index.html
@@ -3808,8 +3808,8 @@
                           " />
                         <img
                           class=""
-                          src="minimal.jfif"
-                          alt="Image"
+                          src=""
+                          alt=""
                       /></picture>
                     </div>
                   </div>
@@ -3865,5 +3865,8 @@
                           <img 
                           src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           /> 
-
+     </p>
+    </div>
+    </div>
+</html>
                       
