--- a/webapp-us/index.html
+++ b/webapp-us/index.html
@@ -85,7 +85,7 @@
     ></script>
     <script
       async=""
-      src="https://connect.facebook.net/en_US/fbevents.js"
+      src=""
     ></script>
     <script
       type="text/javascript"
@@ -214,7 +214,7 @@
     <meta property="og:site_name" content="A Cloud Guru" />
     <meta
       property="article:publisher"
-      content="https://www.facebook.com/acloudguru/"
+      content=""
     />
     <meta
       property="article:modified_time"
@@ -241,9 +241,7 @@
             "name": "A Cloud Guru",
             "url": "https://acloudguru.com/",
             "sameAs": [
-              "https://www.facebook.com/acloudguru/",
               "https://www.linkedin.com/company/a-cloud-guru",
-              "https://twitter.com/acloudguru"
             ],
             "logo": {
               "@type": "ImageObject",
@@ -2404,7 +2402,7 @@
       })();
     </script>
     <meta
-      name="facebook-domain-verification"
+      name=""
       content="n9n4ub5mekhhbta82jsfvz2r4e8865"
     />
     <script
