--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -3811,14 +3811,11 @@
                   </div>
                   <div class="section-intro">
                     <h1 class="page-title subtitle">
-                      Multi-Region Web Application
+                      Multi-AZ Web Application
                     </h1>
                     <h2 class="title heading-2xl title">AnyCompany </h2>
                     <p class="description">Proof of Concept</p>
                     <div class="actions text-left">
-                      <a href="/pricing" class="btn btn-primary btn-lg"
-                        ></a
-                      >
                     </div>
                     <div class="footer">
                       <p class="trust-marks text-s">
