--- a/FINAL-west/index.html
+++ b/FINAL-west/index.html
@@ -686,7 +686,7 @@
         > .elementor-motion-effects-container
         > .elementor-motion-effects-layer {
         background-color: #261e7d;
-        background-image: url("https://wallpaperset.com/w/full/7/f/5/311423.jpg");
+        background-image: url("https://wallpaperset.com/w/full/4/8/1/311299.jpg");
         background-position: bottom right;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1500,7 +1500,7 @@
           .elementor-element.elementor-element-cfb41b8
           > .elementor-motion-effects-container
           > .elementor-motion-effects-layer {
-          background-image: url("https://wallpaperset.com/w/full/7/f/5/311423.jpg");
+          background-image: url("https://wallpaperset.com/w/full/4/8/1/311299.jpg");
         }
         .elementor-28042 .elementor-element.elementor-element-cfb41b8 {
           margin-top: 0px;
@@ -3752,7 +3752,7 @@
       <section
         class="elementor-full-height elementor-section elementor-top-section elementor-element elementor-element-cfb41b8 elementor-section-height-min-height elementor-section-boxed elementor-section-height-default elementor-section-items-middle"
         data-dce-background-color="#261E7D"
-        data-dce-background-image-url="https://wallpaperset.com/w/full/7/f/5/311423.jpg"
+        data-dce-background-image-url="https://wallpaperset.com/w/full/4/8/1/311299.jpg"
         data-id="cfb41b8"
         data-element_type="section"
         data-settings='{"background_background":"classic","shape_divider_bottom":"waves"}'
