--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -1274,7 +1274,7 @@
           .elementor-element.elementor-element-cfb41b8
           > .elementor-motion-effects-container
           > .elementor-motion-effects-layer {
-          background-image: url("https://res.cloudinary.com/acloud-guru/image/fetch/c_limit,f_auto,q_auto,w_1600/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/09/home-top-bg-1024.jpg");
+          background-image: url("https://wallpaperset.com/w/full/a/7/7/311293.jpg");
           background-size: cover;
         }
         .elementor-28042
