--- a/FINAL-west/index.html
+++ b/FINAL-west/index.html
@@ -222,7 +222,7 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/02/3d-covers.png"
+      content=""
     />
     <meta property="og:image:width" content="1440" />
     <meta property="og:image:height" content="810" />
@@ -276,8 +276,8 @@
             "@type": "ImageObject",
             "@id": "https://acloudguru.com/#primaryimage",
             "inLanguage": "en-US",
-            "url": "https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/02/3d-covers.png",
-            "contentUrl": "https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/02/3d-covers.png",
+            "url": "",
+            "contentUrl": "",
             "width": 1440,
             "height": 810
           },
@@ -744,7 +744,7 @@
         > .elementor-motion-effects-container
         > .elementor-motion-effects-layer {
         background-color: #261e7d;
-        background-image: url("https://res.cloudinary.com/acloud-guru/image/fetch/c_limit,f_auto,q_auto,w_1600/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/09/brock.png");
+        background-image: url("");
         background-position: 0% 100%;
         background-repeat: no-repeat;
         background-size: contain;
@@ -1289,7 +1289,7 @@
           .elementor-element.elementor-element-6747e5b
           > .elementor-motion-effects-container
           > .elementor-motion-effects-layer {
-          background-image: url("https://res.cloudinary.com/acloud-guru/image/fetch/c_limit,f_auto,q_auto,w_1600/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/09/brock-500.png");
+          background-image: url("");
           background-position: bottom left;
           background-size: 479px auto;
         }
@@ -1535,7 +1535,7 @@
           .elementor-element.elementor-element-6747e5b
           > .elementor-motion-effects-container
           > .elementor-motion-effects-layer {
-          background-image: url("https://res.cloudinary.com/acloud-guru/image/fetch/c_limit,f_auto,q_auto,w_1600/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/09/brock-500.png");
+          background-image: url("");
           background-position: bottom center;
           background-size: 433px auto;
         }
@@ -1973,7 +1973,7 @@
         > .elementor-widget-container {
         margin: 0px 0px -12px 0px;
         padding: 0px 0px 12px 0px;
-        background-image: url("https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/07/signin_arrow-1.png");
+        background-image: url("");
         background-position: 100% 9px;
         background-repeat: no-repeat;
       }
@@ -2047,7 +2047,7 @@
         font-size: 24px;
       }
       #elementor-popup-modal-34365 .dialog-widget-content {
-        background-image: url("https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2020/07/llama-on-the-couch-375w.jpg");
+        background-image: url("");
         background-position: 0px 328px;
         background-repeat: no-repeat;
         background-size: contain;
