--- a/Test/index.html
+++ b/Test/index.html
@@ -3842,7 +3842,7 @@
                           .trust-mark img {
                             margin-right: 8px;
                             width: 26px;
-                            height: 18px;
+                            height: 25px;
                             padding-right: 8px;
                             border-right: 1px solid var(--body-color);
                           } /*]]>*/</style
@@ -3866,4 +3866,5 @@
                             <img 
                             src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                             /> 
- 
+                          
+                          </span>
