--- a/Test/index.html
+++ b/Test/index.html
@@ -3846,7 +3846,8 @@
                             padding-right: 8px;
                             border-right: 1px solid var(--body-color);
                           } /*]]>*/</style
-                        ><span class="trust-mark">
+                        ><span class="trust-mark" style="font-size: 20px;
+                          ">
                           <img
                             src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           />
@@ -3855,12 +3856,12 @@
                         </span>
 
 
-                          <span class="trust-mark">
+                          <span class="trust-mark" style="font-size: 20px;">
                           <img 
                           src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           />                      
                           
-                          <span class="trust-mark">
+                          <span class="trust-mark" style="font-size: 20px;">
                             <img 
                             src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                             /> 
