--- a/Test/index.html
+++ b/Test/index.html
@@ -3859,7 +3859,10 @@
                           <span class="trust-mark" style="font-size: 20px;">
                           <img 
                           src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
-                          />                      
+                          />  
+                          {
+                            echo $instanceID;
+                          }
                           </span>
                           
                           <span class="trust-mark" style="font-size: 20px;">
