--- a/Test/index.html
+++ b/Test/index.html
@@ -3861,7 +3861,7 @@
                           src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           />  
                           <
-                            echo $instanceID;
+                            echo "Instance ID: $instanceID"
                           >
                           </span>
                           
