--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -3846,7 +3846,7 @@
                             padding-right: 8px;
                             border-right: 1px solid var(--body-color);
                           } /*]]>*/</style
-                        ><span class="trust-mark">
+                        ><span class="trust-mark" style="font-size: 15px;">
                           <img
                             src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           />
@@ -3854,7 +3854,7 @@
                         </span>
 
 
-                          <span class="trust-mark">
+                          <span class="trust-mark" style="font-size: 15px;">
                           <img 
                           src="https://res.cloudinary.com/acloud-guru/image/fetch/c_thumb,f_auto,q_auto,w_18/https://acg-wordpress-content-production.s3.us-west-2.amazonaws.com/app/uploads/2021/04/g2-logo.png"
                           /> 
