--- a/Test/index.html
+++ b/Test/index.html
@@ -3818,7 +3818,7 @@
                     <div class="actions text-left">
                     </div>
                     <div class="footer">
-                      <p class="trust-marks text-s">
+                      <p class="trust-marks text-s" style="font-size: medium; font-weight: bold;">
                         <style>
                           /*<![CDATA[*/
                           .trust-marks {
